# server4home

./: .gitignore  Containerfile  Containerfile.k3s  Containerfile.rancher  Justfile  README.md  artifacthub-repo.yml  cosign.pub
.github/: copilot-instructions.md
.github/workflows/: build.yml  clean.yml
custom/ujust/: README.md
deployments/: .gitkeep  2026-05-23T22-07-30Z-deploy-k3s-rancher-on-ucore-pve-vm.json  2026-05-23T22-34-43Z-deploy-k3s-rancher-on-ucore-pve-vm.json
docs/: bootc-switch-automation.md  ci-build-matrix-refactor.md  deployment-history.md  elemental-fleet-on-harvester-decision.md  k3s-rancher-vms.md  runner-apply-subcommand.md
helpers/network/: set-correct-bridge.sh
helpers/proxmox/: create-rancher-vm.sh
instances/: k3s-on-virt-manager.yaml  k3s-rancher-on-ucore-pve-vm.yaml
iso/: disk.toml  iso.toml
kubeconfigs/: k3s-test-on-virt-manager.kubeconfig
secrets/: secrets.example.yaml
tools/: README.md  pyproject.toml
tools/scripts/: etcd-snapshot.sh
tools/server4home/: __init__.py  cli.py  history.py  manifest.py  registry.py  runner.py  secretref.py  util.py
tools/server4home/installers/: __init__.py  base.py  cert_manager.py  k3s.py  kubernetes_secret.py  metallb.py  rancher_manager.py
tools/server4home/provisioners/: __init__.py  base.py  ip.py  mac.py
tools/server4home/secrets/: __init__.py  base.py  local.py
tools/server4home/targets/: __init__.py  base.py  local_virt_manager.py  pve9.py
